# example-rust-discord-image-bot

./: .env  Cargo.toml  README.md
src/: bot.rs  ezgen.rs  main.rs
