[package]
name = "example-discord-image-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.216"
serenity = "0.12.4"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
